k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: irt-rtsm
  labels:
    name: irt-rtsm
    environment: production
